--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "adaro": "~0.1.5",
     "dustjs-linkedin": "~2.0.3",
     "makara": "~0.3.3",
-    "less": "~1.7.0"
+    "less": "~1.7.0",
+    "mongoose": "~3.8.8"
   },
   "devDependencies": {
     "mocha": "^1.17.0",
